[RWLT-42] - Fix subtotal spacing

--- a/src/components/Cart/Container/style.scss
+++ b/src/components/Cart/Container/style.scss
@@ -75,6 +75,9 @@
     @media (min-width: $md) {
       margin: 0 2em 1em;
     }
+    &Price {
+      margin-left: 0.5em;
+    }
   }
 
   &__btnGroup {
